[tool.poetry]
name = "repl_python3_NavajowhitePhysicalComputation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
utils = "^1.0.1"
functions = "^0.7.0"
python-decouple = "^3.5"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
